# meditrack

./: .gitmodules  CNAME  LICENSE.txt  README.md  app.js  index.html  index1.html  pyproject.toml  style.css
.github/worflow/: update-bdpm.yml
.github/workflows/: deploy.yml
backend/: requirements.txt
backend/ocr/: __init__.py  matcher.py  reader.py
frontend/: index.html
frontend/src/: api-config.js  app.js  style.css
ocr/: ocr.ipynb  pipeline.py
src/: app.js
